--- a/config/db_config.json
+++ b/config/db_config.json
@@ -1,6 +1,6 @@
 {
     "driver": "ODBC Driver 17 for SQL Server",
-    "server": "localhost",
+    "server": "192.168.0.10\\Martin",
     "database": "my_library",
     "port": 1433,
     "uid": "library_user",
