--- a/config/db_config.json
+++ b/config/db_config.json
@@ -1,8 +1,7 @@
 {
     "driver": "ODBC Driver 17 for SQL Server",
-    "server": "192.168.0.10\\Martin",
+    "server": "PC1061",
     "database": "my_library",
-    "port": 1433,
     "uid": "library_user",
     "pwd": "pass123"
 }
